<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ExerciseDiary">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diary_Form_Submit">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/form_hint_title"
            android:inputType="textShortMessage|textAutoCorrect|text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout3"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        tools:layout_editor_absoluteY="566dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_Quant"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/form_hint_quantity"
            android:inputType="textShortMessage|textAutoCorrect|number|text"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        tools:layout_editor_absoluteY="566dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_Timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/form_hint_timestamp"
            android:inputType="date|textShortMessage|datetime|time"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.074">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/form_hint_description"
            android:inputType="textAutoCorrect|textMultiLine"
            android:singleLine="false"
            android:textColor="@color/colorText" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/diary_Form_Submit"
        android:layout_width="198dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:onClick="onDiaryButtonClick"
        android:text="@string/form_submit_text"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="@+id/view_Diary"
        app:layout_constraintStart_toStartOf="@+id/view_Diary"
        app:layout_constraintTop_toBottomOf="@+id/view_Diary"
        app:layout_constraintVertical_bias="0.102" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_Diary"
        android:layout_width="372dp"
        android:layout_height="360dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:listitem="@layout/recycler_view_item" />
</androidx.constraintlayout.widget.ConstraintLayout>